ANTLR4_ASS/TaskParser.py
# Generated from Task.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TaskParser ( Parser ):

    grammarFileName = "Task.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "TRANS_A_L", "TRANS_B_L", "TRANS_B", 
                      "TRANS_A", "WS", "WHITESPACE" ]

    RULE_prog = 0
    RULE_state_1 = 1
    RULE_state_2 = 2

    ruleNames =  [ "prog", "state_1", "state_2" ]

    EOF = Token.EOF
    TRANS_A_L=1
    TRANS_B_L=2
    TRANS_B=3
    TRANS_A=4
    WS=5
    WHITESPACE=6

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TaskParser.State_1Context)
            else:
                return self.getTypedRuleContext(TaskParser.State_1Context,i)


        def state_2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TaskParser.State_2Context)
            else:
                return self.getTypedRuleContext(TaskParser.State_2Context,i)


        def getRuleIndex(self):
            return TaskParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = TaskParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 8
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [TaskParser.TRANS_A_L, TaskParser.TRANS_A]:
                    self.state = 6
                    self.state_1()
                    pass
                elif token in [TaskParser.TRANS_B_L, TaskParser.TRANS_B]:
                    self.state = 7
                    self.state_2()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 10 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TaskParser.TRANS_A_L) | (1 << TaskParser.TRANS_B_L) | (1 << TaskParser.TRANS_B) | (1 << TaskParser.TRANS_A))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANS_A(self):
            return self.getToken(TaskParser.TRANS_A, 0)

        def TRANS_A_L(self):
            return self.getToken(TaskParser.TRANS_A_L, 0)

        def getRuleIndex(self):
            return TaskParser.RULE_state_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_1" ):
                listener.enterState_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_1" ):
                listener.exitState_1(self)




    def state_1(self):

        localctx = TaskParser.State_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_state_1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            _la = self._input.LA(1)
            if not(_la==TaskParser.TRANS_A_L or _la==TaskParser.TRANS_A):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            print('01')
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANS_B(self):
            return self.getToken(TaskParser.TRANS_B, 0)

        def TRANS_B_L(self):
            return self.getToken(TaskParser.TRANS_B_L, 0)

        def getRuleIndex(self):
            return TaskParser.RULE_state_2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_2" ):
                listener.enterState_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_2" ):
                listener.exitState_2(self)




    def state_2(self):

        localctx = TaskParser.State_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_state_2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            _la = self._input.LA(1)
            if not(_la==TaskParser.TRANS_B_L or _la==TaskParser.TRANS_B):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            print('10')
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





